# stonned

./: .gitignore  docker-compose.yml  mintlistNuked.sh
all-staking/: .gitignore  Anchor.toml  README.md  package.json
all-staking/migrations/: deploy.ts
all-staking/scripts/: init.ts
all-staking/tests/: staking.spec.ts
all-web/: #.json  .env.dev  .gitignore  launch  launch2.json  launch3.json  next.config.js  package-lock.json  package.json  sentry.client.config.js  sentry.server.config.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
all-web/.husky/: pre-push
all-web/cli/: Gh5S5bZkqmbEHxLvv2PW3rtfHa95WGUwLdvYG2VVPFGN_mint_accounts.json  cli.ts  db.ts  devnet-p.json  devnet-temp.json  evolutionProgress.json  hash_list_Gh5S5bZkqmbEHxLvv2PW3rtfHa95WGUwLdvYG2VVPFGN.json  nftCli.ts  nftCliAlphaLabs.ts  tsconfig.json
all-web/patches/: react-use+17.3.1.patch
all-web/prisma/: schema.prisma
all-web/src/: faqs.json  (+2 more)
auctions/: .gitignore  Anchor.toml  cli.ts  package.json
awakening/: .gitignore  Anchor.toml  package.json
bot/: .gitignore  package-lock.json  package.json  readme.md  tsconfig.json
breeding/: .gitignore  Anchor.toml  package-lock.json  package.json
breeding/programs/breeding/: Cargo.toml
breeding/programs/breeding/src/: lib.rs
evolution/: .gitignore  Anchor.toml  package.json
evolution/programs/evolution/: Cargo.toml
evolution/programs/evolution/src/: lib.rs
heisl-machine/: .gitignore  Anchor.toml  package.json
lottery/: .gitignore  Anchor.toml  cli.ts  package-lock.json  package.json  raffleStats.csv  transactions.csv  transactions.json
lottery/programs/lottery/: Cargo.toml
lottery/programs/lottery/src/: lib.rs
staking/: .gitignore  Anchor.toml  package.json
staking/programs/sac-staking/: Cargo.toml
staking/programs/sac-staking/src/: lib.rs
web/: .env.dev  .env.dev-mainnet  .gitignore  912nWfxq9dSpjjgsx6Nda4yjSy2DSkwemHtjQc1XRFJL_mint_accounts.json  next.config.js  package-lock.json  package.json  tsconfig.json
(+769 files in other folders)
