[package]
name = "breeding"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "breeding"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.19.0"
anchor-spl = "=0.19.0"
solana-program = "^1.9.0"

metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] } 
metaplex= { version = "0.0.1", features = ["no-entrypoint"] }
mpl-candy-machine = { version = "2.0.1", features = ["no-entrypoint", "cpi"] }


num_enum = "0.5.5"
